--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,12 +6,38 @@
   background: #f6f6f6;
   justify-content: center;
   align-items: center;
+  background-image: url("/background.png");
+  background-size: cover;
 
-  .logo {
-    width: 173px;
-    height: 38px;
-    object-fit: contain;
-    margin-top: 30px;
+  .nav {
+    display: flex;
+    width: 100%;
+    width: 845px;
+    align-items: center;
+    margin: 50px auto;
+    // outline: 1px solid red;
+    .logo {
+      width: 173px;
+      height: 38px;
+      object-fit: contain;
+      filter: invert(100%);
+      margin-right: 82px;
+    }
+    p {
+      font-weight: 500;
+      font-size: 24px;
+      color: #c9c9c9;
+      margin: 0;
+      padding: 0;
+      margin-right: 32px;
+    }
+
+    .sel {
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 32px;
+      color: #ffffff;
+    }
   }
 }
 
@@ -39,7 +65,7 @@
   padding: 25px;
 
   &::placeholder {
-    color: #B0A1A1;
+    color: #b0a1a1;
     font-size: 24px;
     font-family: "Satoshi", sans-serif;
   }
@@ -55,7 +81,7 @@
   padding: 0 25px;
 
   &::placeholder {
-    color: #B0A1A1;
+    color: #b0a1a1;
     font-size: 24px;
     font-family: "Satoshi", sans-serif;
   }
@@ -75,17 +101,18 @@
       font-size: 32px;
       margin: 0;
       margin-bottom: 10px;
+      color: white;
     }
     .preset {
       display: flex;
       background: #ffffff;
-      border-radius: 8px;
+      border-radius: 6px;
       font-size: 16px;
       padding: 5px 8px;
-      border-radius: 10px;
       color: #b0a1a1;
       margin-left: auto;
       padding-right: 55px;
+      width: 286px;
     }
 
     @media (max-width: 550px) {
@@ -103,10 +130,9 @@
   justify-content: space-between;
 
   input {
-    width: 75%;
+    width: 78%;
   }
   button {
-    background: linear-gradient(90deg, #5e1ed1 0%, #3065f3 100%);
     box-shadow: 0px 11.1286px 13.9108px -2.78215px rgba(0, 0, 0, 0.08);
     width: 166.69px;
     height: 62.75px;
@@ -114,6 +140,12 @@
     color: white;
     border: none;
     font-size: 23.5324px;
+    background-image: url("/background.png");
+    background-size: 90%;
+    background-position: center;
+    border: 1px solid #f6f6f6;
+    box-shadow: 0px 11.1286px 13.9108px -2.78215px rgba(0, 0, 0, 0.08);
+    border-radius: 16px;
   }
 
   @media (max-width: 550px) {
@@ -134,6 +166,33 @@
 
 .footer {
   margin-bottom: 25px;
-  margin-top: 20px;
-  color: #616060;
+  margin-top: auto;
+  color: #ffffff;
 }
+
+.features {
+  display: flex;
+  height: fit-content;
+  width: 1200px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  flex-wrap: wrap;
+  .elm {
+    display: flex;
+    align-items: center;
+    height: fit-content;
+    width: 50%;
+    margin-bottom: 20px;
+    img {
+      width: 66px;
+      height: 66px;
+      margin-right: 21px;
+    }
+    h1,
+    p {
+      color: white;
+    }
+  }
+}
+
+
